--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,9 +18,9 @@
       <div class="navbar-nav ms-auto p-4 p-lg-0">
         <a href="index.html" class="nav-item nav-link active">Home</a>
         <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
-        <a routerLink="/useraffich" class="nav-item nav-link">Courses</a>
+        <a routerLink="/courseaffich" class="nav-item nav-link">Courses</a>
 
-        <a routerLink="/useraffich"class="nav-item nav-link">Classes</a>
+        <a routerLink="/subjectaffich"class="nav-item nav-link">Classes</a>
       </div> 
       <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
   </div>
