--- a/src/app/class/class.component.html
+++ b/src/app/class/class.component.html
@@ -21,14 +21,33 @@
       <h2>Get Class</h2>
       <label for="getClassId">Class ID:</label>
       <input type="number" id="getClassId" name="getClassId" [(ngModel)]="getClassId" required>
-  
+    
       <button (click)="getClass()">Get Class</button>
-  
+    
       <div *ngIf="retrievedClass$ | async as retrievedClass">
         <h3>Retrieved Class:</h3>
-        <pre>{{ retrievedClass | json }}</pre>
+        
+        <table border="1">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Max Students</th>
+              <th>Level</th>
+              <!-- Add more table headers based on your SchoolClass properties -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{ retrievedClass.idClass }}</td>
+              <td>{{ retrievedClass.nbMax }}</td>
+              <td>{{ retrievedClass.level }}</td>
+              <!-- Add more table cells based on your SchoolClass properties -->
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
+    
   
     <div>
         <h2>Update Class</h2>
