--- a/src/app/sign/sign.component.css
+++ b/src/app/sign/sign.component.css
@@ -57,14 +57,14 @@ input{
 	border-radius: 5px;
 	opacity: 0.7;
 }
-button{
+button {
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
 	justify-content: center;
 	display: block;
 	color: #fff;
-	background: #3b518a;
+	background: linear-gradient(45deg, #3b518a, #5487df); /* Linear gradient background */
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -73,7 +73,7 @@ button{
 	border-radius: 5px;
 	transition: .2s ease-in;
 	cursor: pointer;
-}
+  }
 button:hover{
 	background: #4a44b8;
 }
