--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,22 +9,22 @@
 </head>
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
   <a class="navbar-brand logo-container" href="#">
-      <img src="assets/images/394019026_262490696850008_273273111956641034_n.png" alt="Logo">
+    <img src="assets/images/394019026_262490696850008_273273111956641034_n.png" alt="Logo">
   </a>
   <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-      <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="index.html" class="nav-item nav-link active">Home</a>
-        <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
-        <a routerLink="/courseaffich" class="nav-item nav-link">Courses</a>
-
-        <a routerLink="/subjectaffich"class="nav-item nav-link">Classes</a>
-      </div> 
-      <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+    <div class="navbar-nav me-auto p-4 p-lg-0">
+      <a href="index.html" class="nav-item nav-link active">Notes</a>
+      <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
+      <a routerLink="/courseaffich" class="nav-item nav-link">Classes</a>
+      <a routerLink="/subjectaffich" class="nav-item nav-link">Courses</a>
+    </div>
+    <button routerLink="" class="button">Deconnect<i class="fa fa-arrow-right ms-3"></i></button>
   </div>
 </nav>
+
 <body>
 
   <div class="container">
