--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -34,17 +34,18 @@
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div >
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="index.html" class="nav-item nav-link active">Notes</a>
             <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
-            <a routerLink="/courseaffich" class="nav-item nav-link">Courses</a>
-    
-            <a routerLink="/subjectaffich"class="nav-item nav-link">Classes</a>
+            <a routerLink="/courseaffich" class="nav-item nav-link">Classes</a>
+            <a routerLink="/subjectaffich" class="nav-item nav-link">Courses</a>
         </div>
-        <a routerLink="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+
     </div>
+    <button routerLink="">Deconnect<i class="fa fa-arrow-right ms-3"></i></button>
 </nav>
+
 <!-- Navbar End -->
  <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
