--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -74,6 +74,48 @@ body {
 }
 
 .navbar .navbar-brand.logo-container img {
-    height: 100px; /* Adjusted height to match navbar */
+    height: 86px; /* Adjusted height to match navbar */
     margin-right: 10px; /* Added margin for spacing */
+}
+.btn-small {
+  color: #000;
+  background-color: #0687cc;
+  border-color: #045397;
+  padding: 0.25rem 0.5rem; /* Adjust padding to make the button smaller */
+}
+
+.btn-small:hover {
+  color: #000;
+  background-color: #2b96d4; /* Use the same blue color as in .btn-primary:hover */
+  border-color: #1f84d1;
+}
+
+.btn-check:focus+.btn-small,
+.btn-small:focus {
+  color: #000;
+  background-color: #2b58d4; /* Use the same blue color as in .btn-primary:focus */
+  border-color: #1f75d1;
+  box-shadow: 0 0 0 0.25rem rgba(4, 40, 119, 0.5);
+}
+
+button {
+  width: 120px; /* Adjust the width to your desired fixed size */
+  height: 50px; /* Adjust the height to your desired fixed size */
+  margin: 10px auto;
+  display: block;
+  color: #fff;
+  background: linear-gradient(45deg, #3b518a, #5487df);
+  font-size: 0.8em; /* Adjusted font size for a smaller button */
+  font-weight: bold;
+  margin-top: 20px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+  cursor: pointer;
+  margin-right: 40px;
+}
+
+button:hover {
+  background: linear-gradient(45deg, #4a44b8, #3b518a);
 }
