--- a/src/app/subjectaffichage/subjectaffichage.component.html
+++ b/src/app/subjectaffichage/subjectaffichage.component.html
@@ -1,32 +1,34 @@
 <body>
-    <div class="container">
-      <form (submit)="getSubjectDetails()">
-        <label for="userId">User ID:</label>
-        <input type="text" id="userId" [(ngModel)]="userId" required>
-  
-        <label for="subjectId">Subject ID:</label>
-        <input type="text" id="subjectId" [(ngModel)]="subjectId" required>
-  
-        <button type="submit">Get Subject Details</button>
-      </form>
-  
-      <div *ngIf="subjectDetails">
-        <h2>Subject Details</h2>
-        <table border="1">
+  <div class="container">
+    <form >
+      <label for="classId">Class ID:</label>
+      <input type="text" id="classId" [(ngModel)]="classId" required>
+      <button type="submit" (click)="toggleTableVisibility()">Get Subjects By Class ID</button>
+    </form>
+ 
+
+    <div *ngIf="subjects && subjects.length > 0">
+      <h3>Subjects:</h3>
+      <table *ngIf="showTable">
+        <thead>
           <tr>
             <th>ID</th>
             <th>Title</th>
-            <th>Note</th>
-            <th>Absence</th>
+            <!-- Add more headers as needed -->
           </tr>
-          <tr>
-            <td>{{ subjectDetails.idSubject }}</td>
-            <td>{{ subjectDetails.title }}</td>
-            <td>{{ subjectDetails.note }}</td>
-            <td>{{ subjectDetails.absence }}</td>
+        </thead>
+        <tbody>
+          <tr *ngFor="let subject of subjects">
+            <td>{{ subject.idSubject }}</td>
+            <td>{{ subject.title }}</td>
+            <!-- Add more cells for other properties -->
           </tr>
-        </table>
-      </div>
+        </tbody>
+      </table>
     </div>
+  </div>
+  
+  
+  
   </body>
   
