--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -36,7 +36,7 @@
     </button>
     <div >
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link active">Notes</a>
+            <a routerLink="/notesaffich" class="nav-item nav-link active">Notes</a>
             <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
             <a routerLink="/courseaffich" class="nav-item nav-link">Classes</a>
             <a routerLink="/subjectaffich" class="nav-item nav-link">Courses</a>
