--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -16,7 +16,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <div class="navbar-nav me-auto p-4 p-lg-0">
-      <a href="index.html" class="nav-item nav-link active">Notes</a>
+      <a routerLink="/notesaffich" class="nav-item nav-link active">Notes</a>
       <a routerLink="/useraffich" class="nav-item nav-link">Events</a>
       <a routerLink="/courseaffich" class="nav-item nav-link">Classes</a>
       <a routerLink="/subjectaffich" class="nav-item nav-link">Courses</a>
