--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -39,6 +39,25 @@
     </div>
   </div>
   <div>
+
+<br>
+
+<div class="container">
+
+  <h2>Add Note to User</h2>
+  <label for="userId">User ID:</label>
+  <input type="number" id="userId" [(ngModel)]="userId" required>
+
+  <label for="subjectId">Subject ID:</label>
+  <input type="number" id="subjectId" [(ngModel)]="subjectId" required>
+
+  <label for="noteValue">Note Value:</label>
+  <input type="number" id="noteValue" [(ngModel)]="noteValue" required>
+
+  <button (click)="addNote()">Add Note</button>
+</div>
+
+
     <h2>Users by Role and Class ID</h2>
     <label for="role">Role: </label>
     <input type="text" id="role" [(ngModel)]="role" />
@@ -61,9 +80,9 @@
   </div>
   
  
+  <br>
 
-
-  <div>
+  <div class="container">
     <h3>Display User</h3>
     <label for="userIdDisplay">User ID:</label>
     <input type="number" id="userIdDisplay" name="userIdDisplay" [(ngModel)]="userId" required>
@@ -91,8 +110,8 @@
     </table>
   </div>
   
-
-  <div>
+  <br>
+  <div class="container">
     <h3>Affect User to Class</h3>
     <label for="userIdClass">User ID:</label>
     <input type="number" id="userIdClass" name="userIdClass" [(ngModel)]="userId" required>
@@ -102,8 +121,8 @@
 
     <button (click)="affectUtilisateurClasse()">Affect User to Class</button>
   </div>
-
-  <div>
+  <br>
+  <div class="container">
     <h3>Affect User to Subject</h3>
     <label for="userIdSubject">User ID:</label>
     <input type="number" id="userIdSubject" name="userIdSubject" [(ngModel)]="userId" required>
